# bAmbi

./: README.md  pyproject.toml
ambilight/: __main__.py  layout.py
ambilight/renderers/: base_renderer.py  gui_renderer.py  terminal_renderer.py
ambilight/transformers/: average_colour_transformer.py  base_transformer.py  static_colour_transformer.py
bambi/: __main__.py  layout.py
bambi/renderers/: base_renderer.py  serial_renderer.py  terminal_renderer.py
bambi/transformers/: average_colour_transformer.py  base_transformer.py  snake_transformer.py  static_colour_transformer.py
tests/: test_ambilight.py  test_bambi.py  test_layout.py
tests/renderers/: test_terminal_renderer.py
tests/transformers/: test_average_colour_transformer.py  test_static_colour_transformer.py
