[tool.poetry]
name = "ambilight"
version = "0.1.0"
description = ""
authors = ["Harry Peach (Personal Signing Key) <harrypeach1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
